-correction d'un bug provoqué par le format de LOT_SIZE(ex:1e-06) renvoyé par l'exchange -correction logger_order: les logs des ordres passés sont dorénavant écrit dans le bon fichier 'order.log' + log le bon prix lors d'un ordre de vente

--- a/ressources/logger.conf
+++ b/ressources/logger.conf
@@ -45,7 +45,7 @@ args=('log/info.log','d',7,'utf-8' )
 class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=formatterOrder
-args=('log/info.log','d',7,'utf-8' )
+args=('log/order.log','d',7,'utf-8' )
 
 [formatter_formatterInfo]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
