--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,5 +30,4 @@ jobs:
         pip install -r requirements.txt
     - name: Test with unittest
       run: |
-        cd ./tests
-        python -m unittest TestBot.py
+        python -m unittest ./tests/TestBot.py
