--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,5 +49,5 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/usp:latest
         cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/usp:buildcache
-        ache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/usp:buildcache,mode=max
+        cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/usp:buildcache,mode=max
 
